{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "6bcc13ec-c50e-4df9-3294-32d230db3008",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-08-30T04:26:44.180-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-icmp",
            "log_config": [],
            "name": "kthw-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
            "priority": 1000,
            "project": "stoked-outlook-470308-s7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kthw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2379-2380",
                  "10250",
                  "10251",
                  "10252",
                  "10256"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8472"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-08-30T04:26:43.874-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-internal",
            "log_config": [],
            "name": "kthw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
            "priority": 1000,
            "project": "stoked-outlook-470308-s7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kthw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-30T04:26:44.295-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-k8s-api",
            "log_config": [],
            "name": "kthw-allow-k8s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
            "priority": 1000,
            "project": "stoked-outlook-470308-s7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-k8s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-30T04:26:44.048-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-nodeport",
            "log_config": [],
            "name": "kthw-allow-nodeport",
            "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
            "priority": 1000,
            "project": "stoked-outlook-470308-s7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-nodeport",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-30T04:26:44.187-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-ssh",
            "log_config": [],
            "name": "kthw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
            "priority": 1000,
            "project": "stoked-outlook-470308-s7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/firewalls/kthw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kthw"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/disks/jumpbox-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/jumpbox-0",
            "instance_id": "8823551640245068055",
            "label_fingerprint": "ZPQkcqGEdZg=",
            "labels": {
              "environment": "learning",
              "purpose": "kubernetes-the-hard-way",
              "role": "jumpbox"
            },
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "kthw-gcp:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP7mTc6XN8urL1MCqCPDaMJoanyRNdXV8JSLTzXFf6Bq kthw-gcp\n"
            },
            "metadata_fingerprint": "mEXpmJ4U8Ac=",
            "name": "jumpbox-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.97.45",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
                "network_ip": "10.128.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "stoked-outlook-470308-s7"
              }
            ],
            "project": "stoked-outlook-470308-s7",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/jumpbox-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jumpbox",
              "kthw"
            ],
            "tags_fingerprint": "1jXdtM7DLNA=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/disks/server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/server",
            "instance_id": "1862703276103785581",
            "label_fingerprint": "PkQ1PFsGh1o=",
            "labels": {
              "environment": "learning",
              "purpose": "kubernetes-the-hard-way",
              "role": "server"
            },
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "kthw-gcp:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP7mTc6XN8urL1MCqCPDaMJoanyRNdXV8JSLTzXFf6Bq kthw-gcp\n"
            },
            "metadata_fingerprint": "mEXpmJ4U8Ac=",
            "name": "server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.75.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
                "network_ip": "10.128.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "stoked-outlook-470308-s7"
              }
            ],
            "project": "stoked-outlook-470308-s7",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kthw",
              "server"
            ],
            "tags_fingerprint": "FojRMRhNKfI=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/disks/node-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/node-0",
            "instance_id": "271135975577444632",
            "label_fingerprint": "FYWFs1KMcxk=",
            "labels": {
              "environment": "learning",
              "purpose": "kubernetes-the-hard-way",
              "role": "worker"
            },
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "kthw-gcp:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP7mTc6XN8urL1MCqCPDaMJoanyRNdXV8JSLTzXFf6Bq kthw-gcp\n"
            },
            "metadata_fingerprint": "mEXpmJ4U8Ac=",
            "name": "node-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.81.253",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "stoked-outlook-470308-s7"
              }
            ],
            "project": "stoked-outlook-470308-s7",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/node-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kthw",
              "worker"
            ],
            "tags_fingerprint": "g751p95Hx8Q=",
            "zone": "us-central1-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/disks/node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/node-1",
            "instance_id": "3923619526085665047",
            "label_fingerprint": "FYWFs1KMcxk=",
            "labels": {
              "environment": "learning",
              "purpose": "kubernetes-the-hard-way",
              "role": "worker"
            },
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "kthw-gcp:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIP7mTc6XN8urL1MCqCPDaMJoanyRNdXV8JSLTzXFf6Bq kthw-gcp\n"
            },
            "metadata_fingerprint": "mEXpmJ4U8Ac=",
            "name": "node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.68.239.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/global/networks/default",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "stoked-outlook-470308-s7"
              }
            ],
            "project": "stoked-outlook-470308-s7",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stoked-outlook-470308-s7/zones/us-central1-a/instances/node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kthw",
              "worker"
            ],
            "tags_fingerprint": "g751p95Hx8Q=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}